# ytxplayer

./: README.md  libraryloadsort.txt  test.txt
YtxPlayer/app/: CMakeLists.txt  build.gradle
YtxPlayer/app/src/androidTest/java/com/ytx/ican/ytxplayer/: ExampleInstrumentedTest.java
YtxPlayer/app/src/main/: AndroidManifest.xml
YtxPlayer/app/src/main/assets/ass/: test.ass
YtxPlayer/app/src/main/cpp/: ALog-priv.h  CMakeLists.txt  Decoder.cpp  Decoder.h  FindFF.cmake  PacketQueue.cpp  Thread.cpp  YtxMediaPlayer.cpp  YtxMediaPlayer.h  android_media_YtxMediaPlayer.cpp  android_media_YtxMediaPlayer.h  decoder_audio.cpp  decoder_audio.h  decoder_video.cpp  decoder_video.h  ffinc.h  ffmain.cpp  frame_queue.cpp  frame_queue.h  native-lib.cpp  native-lib.h  packetqueue.h
YtxPlayer/app/src/main/cpp/ffmpeg-cmd/: CMakeLists.txt
YtxPlayer/app/src/main/cpp/ffplay-test/: CMakeLists.txt  cmdutils.c  ffmpeg.c  ffmpeg_filter.c  ffmpeg_opt.c  ffplay.c
YtxPlayer/app/src/main/cpp/font-config-path/: CMakeLists.txt
YtxPlayer/app/src/main/cpp/font-config-path/src/: fontconfigpath.c
YtxPlayer/app/src/main/cpp/gl-engine/: CMakeLists.txt
YtxPlayer/app/src/main/cpp/gl-engine/src/: gl_engine.cpp
YtxPlayer/app/src/main/cpp/include/: config.h  fontconfigpath.h
YtxPlayer/app/src/main/cpp/include/SDL/: SDL_config.h
YtxPlayer/app/src/main/cpp/include/libpng/: png.h
YtxPlayer/app/src/main/cpp/include/libxml2/libxml/: xmlversion.h
YtxPlayer/app/src/main/cpp/include/mp4v2/: project.h
YtxPlayer/app/src/main/cpp/include/openssl/: opensslconf.h
YtxPlayer/app/src/main/cpp/include/x264/: x264_config.h
YtxPlayer/app/src/main/cpp/include/ytxplayer/: ALog-priv.h  AudioRefreshController.h  Decoder.h  GLThread.h  GlslFilter.h  InputStream.h  MediaPlayerListener.h  MessageLoop.h  MessageQueue.h  Thread.h  VideoRefreshController.h  VideoStateInfo.h  YtxMediaPlayer.h  android_media_YtxMediaPlayer.h  audio_engine.h  avPacketList.h  decoder_audio.h  decoder_subtitle.h  decoder_video.h  ffinc.h  ffmsg.h  frame_queue.h  frame_queue_audio.h  frame_queue_subtitle.h  frame_queue_video.h  gl_code.h  gl_engine.h  headerBmp.h  lock.h  merrors.h  native_audio.h  packetqueue.h  playerPrepareAsync.h  test.h  utils.h
YtxPlayer/app/src/main/cpp/sdl-custom/: CMakeLists.txt
YtxPlayer/app/src/main/cpp/sdl-custom/include/: AudioTrack.h  AudioTrack.util.h  J4aBase.h  J4aBuild.h  PlaybackParams.h  SdlAndroidJni.h  SdlAout.h  SdlAoutInternal.h  SdlAoutOpensles.h  SdlAudio.h  SdlClass.h  SdlEndian.h  SdlIncInternal.h  SdlMisc.h  SdlMutex.h  SdlStdinc.h  SdlThread.h  android_audio_track.h
YtxPlayer/app/src/main/cpp/sdl-custom/src/: AudioTrack.c  AudioTrack.util.c  J4aBase.c  J4aBuild.c  J4a_allclasses.c  PlaybackParams.c  SdlAndroidJni.c  SdlAout.c  SdlAoutOpensles.c  SdlAudio.c  SdlMutex.c  SdlThread.c  android_audio_track.c
YtxPlayer/app/src/main/cpp/src/: AudioRefreshController.cpp  Decoder.cpp  MessageLoop.cpp  MessageQueue.cpp  PacketQueue.cpp  Thread.cpp  VideoRefreshController.cpp  VideoStateInfo.cpp  YtxMediaPlayer.cpp  android_media_YtxMediaPlayer.cpp  audio_engine.cpp  decoder_audio.cpp  decoder_subtitle.cpp  decoder_video.cpp  frame_queue.cpp  frame_queue_audio.cpp  frame_queue_subtitle.cpp  frame_queue_video.cpp  gl_code.cpp  gl_engine.cpp  lock.cpp  native-audio.cpp  playerPrepareAsync.cpp
YtxPlayer/app/src/main/cpp/ytxplayer/: CMakeLists.txt
YtxPlayer/app/src/main/cpp/ytxplayer/src/: AudioRefreshController.cpp  Decoder.cpp  GLThread.cpp  GlslFilter.cpp  MessageLoop.cpp  MessageQueue.cpp  PacketQueue.cpp  PlayerPrepareAsync.cpp  Thread.cpp  VideoRefreshController.cpp  VideoStateInfo.cpp  YtxMediaPlayer.cpp  android_media_YtxMediaPlayer.cpp  audio_engine.cpp  decoder_audio.cpp  decoder_subtitle.cpp  decoder_video.cpp  frame_queue.cpp  frame_queue_audio.cpp  frame_queue_subtitle.cpp  frame_queue_video.cpp  gl_engine.cpp  lock.cpp  native-lib.cpp  test.c  utils.cpp
YtxPlayer/app/src/main/java/: com_ytx_ican_media_player_YtxMediaPlayerTest.h  com_ytx_ican_media_player_render_GraphicRenderer.h  com_ytx_ican_ytxplayer_MainActivity.h
YtxPlayer/app/src/main/java/com/ytx/ican/: VideoApplication.java
YtxPlayer/app/src/main/java/com/ytx/ican/media/player/: IMediaPlayer.java  LibLoader.java  YtxLog.java  YtxMediaPlayer.java  YtxMediaPlayerTest.java
YtxPlayer/app/src/main/java/com/ytx/ican/ytxplayer/: MainActivity.java  MainActivity1.java  MainActivity2.java
YtxPlayer/app/src/main/java/com/ytx/ican/ytxplayer/activity/: BaseActivity.java  FileExplorerActivity.java  FileExplorerSubTitleActivity.java  MainActivity.java  MainActivity2.java  SettingActivity.java  SimpleBarRootActivity.java  VideoMainActivity.java
YtxPlayer/app/src/main/java/com/ytx/ican/ytxplayer/base/: ActivityHelper.java
YtxPlayer/app/src/main/java/com/ytx/ican/ytxplayer/constants/: ActivityResultConst.java  ConstKey.java  KeyConst.java
YtxPlayer/app/src/main/java/com/ytx/ican/ytxplayer/content/: PathCursor.java  PathCursorLoader.java
YtxPlayer/app/src/main/java/com/ytx/ican/ytxplayer/eventbus/: FileExplorerEvents.java
YtxPlayer/app/src/main/java/com/ytx/ican/ytxplayer/fragment/: FileListFragment.java
YtxPlayer/app/src/main/java/com/ytx/ican/ytxplayer/setting/: Settings.java
YtxPlayer/app/src/main/java/com/ytx/ican/ytxplayer/utils/: FontSearchConfig.java  PreferenceUtil.java  ScreenUtil.java  Utils.java
YtxPlayer/app/src/main/res/color/: labellayout_subtitle_text_bg.xml
YtxPlayer/app/src/main/res/drawable/: bg_loading.xml  btn_green_rectangle_style.xml  edit_round_general.xml  ic_arrows_right_selector.xml  ic_back.xml  ic_setting.xml
YtxPlayer/app/src/main/res/layout/: activity_base.xml  activity_file_explorer.xml  activity_main.xml  activity_main1.xml  activity_setting.xml  activity_simple_bar_root.xml  bar_simple_title.xml  base_line.xml  file_name_dropdow_item.xml  fragment_file_list.xml  item_file_name.xml  progress_loading.xml
YtxPlayer/app/src/main/res/values/: attrs.xml  colors.xml  ids.xml  strings.xml  styles.xml
YtxPlayer/app/src/test/java/com/ytx/ican/ytxplayer/: ExampleUnitTest.java
(+44 files in other folders)
